syntax = "proto3";

package proto;

/*-
 * ‌
 * Hedera Network Services Protobuf
 * ​
 * Copyright (C) 2018 - 2021 Hedera Hashgraph, LLC
 * ​
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * ‍
 */

option java_package = "com.hedera.hashgraph.sdk.proto";
option java_multiple_files = true;

import "transaction.proto";

/**
 * A simple protobuf wrapper to store a list of transactions. This is used by
 * `Transaction.[from|to]Bytes()` in the SDKs. The reason the SDK needs a list of transactions is
 * because it holds onto a transaction per node. So if a transaction is to be submitted to nodes 3
 * and 4 the SDK Transaction type would contain a list of 2 protobuf transactions, one for node 3
 * and one for node 4.
 */
message TransactionList {
    repeated Transaction transaction_list = 1;
}
